Atualização dos parâmetros no .env

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 AZURE_CREDENTIALS=""
 
-DATA_LENGTH=100
+GENERATION_TIMEOUT=5
+PACKAGE_DATA_LENGTH=10
 
-SENT_TO_AZURE="0"
-RECORD_LOGS="0"
+SENT_TO_AZURE="1"
+RECORD_LOGS="1"
