feat: alteração de template com valores para acesso ao iot core

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,10 @@
-AZURE_CREDENTIALS=""
-
-GENERATION_TIMEOUT=5
-PACKAGE_DATA_LENGTH=10
-
-SENT_TO_AZURE="1"
+GENERATION_TIMEOUT=1
+PACKAGE_DATA_LENGTH=1
+SENT_TO_AWS="1"
 RECORD_LOGS="1"
+ENDPOINT = "zona.amazon.com"
+TOPIC = "arquivos/"
+PATH_TO_CERTIFICATE = "arquivos/certificado.crt"
+PATH_TO_PRIVATE_KEY= "arquivos/chave_privmaria.pem"
+PATH_TO_AMAZON_ROOT_CA_1= "arquivos/root_ca1"
+CLIENT_ID = "nome-dispositivo"
