fix: correção do valor de variaveis do template

--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,8 @@ PACKAGE_DATA_LENGTH=1
 SENT_TO_AWS="1"
 RECORD_LOGS="1"
 ENDPOINT = "zona.amazon.com"
-TOPIC = "arquivos/"
-PATH_TO_CERTIFICATE = "arquivos/certificado.crt"
-PATH_TO_PRIVATE_KEY= "arquivos/chave_privmaria.pem"
-PATH_TO_AMAZON_ROOT_CA_1= "arquivos/root_ca1"
-CLIENT_ID = "nome-dispositivo"
+TOPIC = "wattson/sensors/energy"
+PATH_TO_CERTIFICATE = "archives/certificado.crt"
+PATH_TO_PRIVATE_KEY= "archives/chave_primaria.pem"
+PATH_TO_AMAZON_ROOT_CA_1= "archives/root_ca1"
+CLIENT_ID = "wattson-coisa"
