Corrigindo leitura local

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,7 @@
-GENERATION_TIMEOUT=1
-PACKAGE_DATA_LENGTH=1
-SENT_TO_AWS="1"
-RECORD_LOGS="1"
-ENDPOINT = "zona.amazon.com"
-TOPIC = "wattson/sensors/energy"
-PATH_TO_CERTIFICATE = "archives/certificado.crt"
-PATH_TO_PRIVATE_KEY= "archives/chave_primaria.pem"
-PATH_TO_AMAZON_ROOT_CA_1= "archives/root_ca1"
-CLIENT_ID = "wattson-coisa"
+GENERATION_TIMEOUT=60
+SAVE_LOCALLY="0"
+
+SENT_TO_AWS="0"
+ENDPOINT=""
+TOPIC=""
+CLIENT_ID=""
